...
            //Imagen de logo
            Image(
                painter = painterResource(id = R.drawable.login), contentDescription = "", modifier =
                Modifier
                    .width(150.dp)
                    .height(150.dp)
                    .testTag("loginImage")
            )
            Spacer(modifier = Modifier.height(32.dp))

            StyledText(
                value = userAux.user.email,
                text = stringResource(R.string.email),
...
