...
            .padding(horizontal = 16.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.Center
    ) {
        Image(
            painter = imagePainter,
            modifier = Modifier.size(200.dp).testTag("RegisterScreenLogo"),
            contentDescription = "Anonymous"
        )

        Spacer(modifier = Modifier.height(16.dp))

        StyledText(
...
                    loginViewModel.setError(val3)
                }
            },
            modifier = Modifier
                .fillMaxWidth()
                .height(45.dp)
                .testTag("RegisterScreenRegisterButton"),
            colors = ButtonDefaults.buttonColors(
                backgroundColor = Color(
                    147, 46, 61
                )
            )
        ) {
...
